add route for beaxy auth
