# controllers/authStrategies/index.js
@@ -1,6 +1,8 @@
+const _ = require( 'lodash' );
 const passport = require( 'passport' );
 const render = require( '../../concerns/render' );
-const Auth = require( '../../utilities/authentication/auth' );
+const { Auth, Beaxy } = require( '../../utilities/authentication' );
+
 
 require( '../../utilities/authentication/passport' )( passport );
 
@@ -25,4 +27,32 @@ const pickFields = async( { provider, req, res, next } ) => {
             resolve( data.fields );
         } )( req, res, next );
     } );
+};
+
+
+exports.beaxyStrategy = async ( params, res ) => {
+    const data = {
+        key: _.has( params.authData, [ 'password' ] ) ? '' : '/2fa',
+        credentials: { ...params.authData }
+    };
+    const { result, um_session } = await Beaxy.beaxyAuth( { ...data } );
+    if ( result.status === 200 ) {
+        switch( result.data.response ) {
+            case 'SUCCESS' :
+                const userFields = await Beaxy.getUserFields( params.authData.user );
+                if ( um_session ) {
+                    res.setHeader( 'um_session', um_session.value );
+                    res.setHeader( 'um_session_exp', new Date( Math.round( um_session.expires ).valueOf() / 1000 ) );
+                }
+                const { user, session, message } = await Auth.socialAuth( userFields );
+                return { user, session, beaxyPayload: result.data.payload, message };
+            case 'TWO_FA_VERIFICATION_NEEDED' :
+                if( _.get( result, 'data.payload.token2fa' ) ) {
+                    return render.success( res, result.data );
+                }
+                return { message: '2fa token not provided' };
+            default :
+                return { message: result.data.response };
+        }
+    }
 };
